--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       rel="stylesheet"
     />
     <!-- Custom styles -->
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/main.min.css">
   </head>
 
   <body class="page">
@@ -124,15 +124,14 @@
               <p class="features__list__desc">Так само консультація з широким активом значною мірою зумовлює.</p>
             </li>
             <li class="features__item">
-              <div class="features__img>
+              <div class="features__img">
                 <svg class="features__icon" width="70" height="70">
                   <use href="./images/icons/icons.svg#astronaut"></use>
                 </svg>
               </div>
               <h3 class="features__list__title">Сучасні технології</h3>
-              <p class="features__list__desc">
-                Значимість цих проблем настільки очевидна, що реалізація планових завдань.
-              </p>
+              <p class="features__list__desc">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+            </li>
             </li>
           </ul>
         </div>
