--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,7 @@
     <header class="header-container">
       <div class="container header">
         <nav class="header__nav">
-          <a class="header__logo link" href=""><span class="logo__light">Web</span>Studio</a>
+          <a class="header__logo link" href=""><span class="part__logo">Web</span>Studio</a>
           <ul class="header__nav__list list">
             <li class="header__nav__item">
               <a
