--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,7 @@
           <ul class="header__nav__list list">
             <li class="header__nav__item">
               <a
-                class="header__nav__link header__nav__link--focused link"
+                class="header__nav__link header__nav__link--focused link current"
                 href="./index.html"
                 target="_self"
                 rel="noopener noreferrer"
@@ -41,7 +41,7 @@
             </li>
             <li class="header__nav__item">
               <a
-                class="header__nav__link header__nav__link--focused link current"
+                class="header__nav__link header__nav__link--focused link"
                 href="./portfolio.html"
                 target="_self"
                 rel="noopener noreferrer"
@@ -81,6 +81,17 @@
             >
           </li>
         </ul>
+
+        <button
+          type="button"
+          class="menu-btn js-open-menu"
+          aria-expanded="false"
+          aria-controls="mobile-menu"
+        >
+          <svg width="40" height="40">
+            <use href="./images/icons/icons.svg#open-menu"></use>
+          </svg>
+        </button>
       </div>
     </header>
 
@@ -436,7 +447,85 @@
             </button>
           </div>
         </div>
+
+        <div class="menu-container js-menu-container" id="mobile-menu">
+          <button type="button" class="menu-toggle js-close-menu">
+            <svg class="menu-toggle_icon" width="40" height="40">
+              <use href="./images/icons/icons.svg#close-menu"></use>
+            </svg>
+          </button>
+
+          <ul class="mobile-list list">
+            <li class="mobile-list__item">
+              <a
+                href="./index.html"
+                class="mobile-list__link link"
+                target="_self"
+                rel="noopener noreferrer"
+                >Студія</a
+              >
+            </li>
+            <li class="mobile-list__item">
+              <a
+                href="./portfolio.html"
+                class="mobile-list__link link current"
+                target="_self"
+                rel="noopener noreferrer"
+                >Портфоліо</a
+              >
+            </li>
+            <li class="mobile-list__item">
+              <a href="" class="mobile-list__link link" target="_self" rel="noopener noreferrer"
+                >Контакти</a
+              >
+            </li>
+          </ul>
+
+          <ul class="mobile-contact list">
+            <li class="mobile-contact__item">
+              <a href="tel:+380961111111" class="mobile-contact__link mobile-tel link"
+                >+38 096 111 11 11</a
+              >
+            </li>
+            <li class="mobile-contact__item">
+              <a href="mailto:info@devstudio.com" class="mobile-contact__link mobile-mail link"
+                >info@devstudio.com</a
+              >
+            </li>
+          </ul>
+
+          <ul class="mobile-socials list">
+            <li class="mobile-socials__item">
+              <a href="" class="mobile-socials__link link" target="_blank" rel="noopener noreferrer"
+                >Instagram</a
+              >
+            </li>
+            <li class="mobile-socials__item">
+              <a href="" class="mobile-socials__link link" target="_blank" rel="noopener noreferrer"
+                >Twitter</a
+              >
+            </li>
+            <li class="mobile-socials__item">
+              <a href="" class="mobile-socials__link link" target="_blank" rel="noopener noreferrer"
+                >Facebook</a
+              >
+            </li>
+            <li class="mobile-socials__item">
+              <a href="" class="mobile-socials__link link" target="_blank" rel="noopener noreferrer"
+                >LinkedIn</a
+              >
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
+
+    <script
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+      integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+      crossorigin="anonymous"
+    ></script>
+    <script defer src="js/mobile-menu.js"></script>
   </body>
 </html>
